Fix gradle compile